[Add] Create route for getting all the helpNumbers
