# src/swagger.yaml
@@ -223,6 +223,26 @@ paths:
                 $ref: '#/components/schemas/internalServerError'
       security:
         - x-auth-token: []
+  /user/helpNumbers:
+    get:
+      tags:
+        - user
+      summary: Get the list of all the helpNumbers.
+      description: >
+        Send a json containing an array of helpNumbers.
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HelpNumberArray'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerError'
   /user/chat/users:
     get:
       tags:
@@ -268,7 +288,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Register'
+              $ref: '#/components/schemas/Profile'
       responses:
         '200':
           description: Successful operation
@@ -739,6 +759,10 @@ components:
         helpNumbersCategory:
           type: string
           example: "64b15338a8c793949de08680"
+    HelpNumberArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/HelpNumber'
     HelpNumbersCategory:
       type: object
       properties:
@@ -807,6 +831,18 @@ components:
         message:
           type: string
           example: 'At least email or telephone have to be present'
+    UserNotFound:
+      type: object
+      properties:
+        message:
+          type: string
+          example: 'User not found: 64b15338a8c793949de08695'
+    UsersNotFound:
+      type: object
+      properties:
+        message:
+          type: string
+          example: 'Users not found: [64b15338a8c793949de08695, 64b15338a8c793949de08696]'
     failedRoles:
       type: object
       properties:
